@@ -226,6 +226,8 @@ Library
 
 - Issue #17052: unittest discovery should use self.testLoader.
 
+- Issue #4591: Uid and gid values larger than 2**31 are supported now.
+
 - Issue #17141: random.vonmisesvariate() no more hangs for large kappas.
 
 - Issue #17149: Fix random.vonmisesvariate to always return results in
